change assets font

--- a/src/resources/i18n/fr/fr.json
+++ b/src/resources/i18n/fr/fr.json
@@ -41,5 +41,8 @@
             "successUnits": "Unités changées avec succès",
             "successCity": "Ville par défaut changée avec succès"
         }
+    },
+    "error": {
+        "errorMessage": "oups une erreur est survenu... veuillez recharger l'application"
     }
 }
